--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: unit_testing
-description: A new Flutter project.
+description: A small task for build clean architecture desgin with unit testing for all sides in this task such test for data layer ,domain layer and bloc test for logic design and integration test for UI design.
 
 
 publish_to: 'none' 
